objects/Lead.object
<CustomObject>
    <fields>
        <fullName>SNPCAPIQ__PE_CapitalIQProfessionalID_txt__c</fullName>
        <formula>IF(SNPCAPIQ__CapitalIQProfessionalID__c!=0, Text(SNPCAPIQ__CapitalIQProfessionalID__c), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PE_S&amp;P Capital IQ Professional ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Primary_Exchange__c</fullName>
        <label>S&amp;P Capital IQ Primary Exchange</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__SNPMI_MICompanyID__c</fullName>
        <description>Created as part of user story # 3090543 - [MI APP] Update the APEX code to include the new fields on accounts and leads</description>
        <label>S&amp;P MI Company Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__SNPMI_MIUltimate_Parent_Company_Key__c</fullName>
        <description>Created as part of user story # 3090543 - [MI APP] Update the APEX code to include the new fields on accounts and leads</description>
        <label>S&amp;P MI Ultimate Parent Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Ticker_Symbol__c</fullName>
        <label>S&amp;P Capital IQ Ticker Symbol</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Ultimate_Parent_Company_ID__c</fullName>
        <label>S&amp;P Capital IQ Ultimate Parent CompanyID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Ultimate_Parent_Company__c</fullName>
        <label>S&amp;P Capital IQ Ultimate Parent Company</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Year_Founded__c</fullName>
        <label>S&amp;P Capital IQ Year Founded</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SPG_Referral_Product_Interest__c</fullName>
        <description>US-3861071: DO NOT MODIFY/DELETE. CI Referral package field. SPG Referral standardized product interest picklist values. Will be updated via Informatica from source divisional org.</description>
        <inlineHelpText>Includes the referred client&apos;s product interests.</inlineHelpText>
        <label>SPG Referral Product Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CIRef_SPG_Referral_Products</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesAssignmentTime__c</fullName>
        <description>SFDC-4046: Lead Time Enhancement Request</description>
        <inlineHelpText>Number of days (fractional) between the first Sales Rep/Queue assignment and the last Sales Rep/Queue assignment</inlineHelpText>
        <label>Sales Assignment Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesConvertedDisqualified__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <description>SFDC-4046: Lead Time Enhancement Request</description>
        <label>Sales Converted / Disqualified</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesQualificationTime__c</fullName>
        <description>SFDC-4046: Lead Time Enhancement Request</description>
        <inlineHelpText>Number of days (fractional) between Sales Working status and either Converted or Disqualified status</inlineHelpText>
        <label>Sales Qualification Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesTimetoPickup__c</fullName>
        <description>SFDC-4046: Lead Time Enhancement Request</description>
        <inlineHelpText>Number of days (fractional) between the last Sales Rep/Queue assignment and status change to Sales Working</inlineHelpText>
        <label>Sales Time to Pick up</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-192;Hidden field, need for validation and process builder</description>
        <label>SalesUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesWorking__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <description>SFDC-4046: Lead Time Enhancement Request</description>
        <label>Sales Working</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScoreDefinition__c</fullName>
        <description>SFHD1 -105; Text field</description>
        <inlineHelpText>Please provide a score defination</inlineHelpText>
        <label>Score Definition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ScoreModel__c</fullName>
        <description>SFDC1-105; Text field</description>
        <inlineHelpText>Please populate</inlineHelpText>
        <label>Score Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>SFHD1- 105; A picklist field for score</description>
        <inlineHelpText>Marketing Score based on Contact&apos;s implicit and explicit behavior</inlineHelpText>
        <label>Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
                <value>
                    <fullName>A4</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>B3</fullName>
                </value>
                <value>
                    <fullName>B4</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>C4</fullName>
                </value>
                <value>
                    <fullName>D1</fullName>
                </value>
                <value>
                    <fullName>D2</fullName>
                </value>
                <value>
                    <fullName>D3</fullName>
                </value>
                <value>
                    <fullName>D4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ScriptAccessURL__c</fullName>
        <description>SFDC1- 105; URL field for Script Access URL</description>
        <inlineHelpText>Link to script associated to product of interest</inlineHelpText>
        <label>Script Access URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SourceCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-44 relationship for Case to lead flow</description>
        <inlineHelpText>Case from which lead has been generated</inlineHelpText>
        <label>Source Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubIndustry__c</fullName>
        <description>SFDC1 -105; Sub sector of a Industry</description>
        <inlineHelpText>Please populate a Sub- Industry</inlineHelpText>
        <label>Sub Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synergy__c</fullName>
        <formula>IF( RecordType.Name =&apos;SPG Referral Leads&apos;, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Synergy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeframe__c</fullName>
        <description>SFDC1- 105; Picklist field</description>
        <inlineHelpText>Contact&apos;s propensity to buy</inlineHelpText>
        <label>Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>As soon as possible</fullName>
                </value>
                <value>
                    <fullName>Within the next 3 months</fullName>
                </value>
                <value>
                    <fullName>3 to 6 months</fullName>
                </value>
                <value>
                    <fullName>More than 6 months</fullName>
                </value>
                <value>
                    <fullName>No plans to move forward</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transferred__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For outbound transfer leads, automation checks this field to track which leads were transferred for reporting.</description>
        <inlineHelpText>If checked, this lead was transferred to a division.</inlineHelpText>
        <label>Transferred?</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AerospaceDefenseSecurityAPAC_Lead</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Rating__c</columns>
        <columns>Score__c</columns>
        <columns>AccountName__c</columns>
        <columns>LeadAge__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Converted,Disqualify</value>
        </filters>
        <label>Aerospace, Defense, Security - APAC</label>
        <queue>AerospaceDefenseSecurityAPAC</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AerospaceDefenseSecurityAmericas_Lead</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Rating__c</columns>
        <columns>Score__c</columns>
        <columns>LeadAge__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Converted,Disqualify</value>
        </filters>
        <label>Aerospace, Defense, Security - Americas</label>
        <queue>AerospaceDefenseSecurityAmericas</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AerospaceDefenseSecurityEMEA_Lead</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Rating__c</columns>
        <columns>Score__c</columns>
        <columns>LeadAge__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Converted,Disqualify</value>
        </filters>
        <label>Aerospace, Defense, Security - EMEA</label>
        <queue>AerospaceDefenseSecurityEMEA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Aina_Khalilah_Izman_Kamal</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>CalculatedRegion__c</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>LeadAge__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>SDRTimetoPickup__c</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>ProductInterest__c</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CallDispositionedBy__c</field>
            <operation>equals</operation>
            <value>Aina Khalilah Izman Kamal</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Prioritized,Pre-SalesWorking,Pre-Sales Working</value>
        </filters>
        <label>Aina Khalilah Izman Kamal</label>
    </listViews>
    <listViews>
        <fullName>AlchemyTransitionQueue_Lead</fullName>
        <columns>CalculatedRegion__c</columns>
        <columns>ProductInterest__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>Alchemy_TransitionQueue</label>
        <queue>AlchemyTransitionQueue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllClosedLeads</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Rating__c</columns>
        <columns>Score__c</columns>
        <columns>LeadAge__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Converted,Disqualify</value>
        </filters>
        <label>All Closed Leads</label>
    </listViews>
    <listViews>
        <fullName>AllLeads</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>Rating__c</columns>
        <columns>Score__c</columns>
        <columns>ScoreDefinition__c</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Score__c</field>
            <operation>contains</operation>
            <value>A1,A2,A3,A4,B1,B2,B3,B4,C1,C2,C3,C4,D1,D2,D3,D4</value>
        </filters>
        <label>All Leads</label>
    </listViews>
    <listViews>
        <fullName>AllMarketingQualifiedLeads</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Rating__c</columns>
        <columns>Score__c</columns>
        <columns>LeadAge__c</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>Marketing Generated,Analyst Generated</value>
        </filters>
        <label>All Marketing Leads</label>
    </listViews>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Rating__c</columns>
        <columns>Score__c</columns>
        <columns>LeadAge__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Converted,Disqualify</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Antoan_Michev</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LeadAge__c</columns>
        <columns>CallDispositionedBy__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>SDRTimetoPickup__c</columns>
        <columns>CalculatedRegion__c</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CallDispositionedBy__c</field>
            <operation>equals</operation>
            <value>Antoan Michev</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Prioritized,Pre-SalesWorking,Pre-Sales Working,Pre-SalesQualified,Pre-Sales Qualified,SalesWorking,Sales Working,Converted,Disqualify</value>
        </filters>
        <label>Antoan Michev</label>
    </listViews>
    <listViews>
        <fullName>Auto_Annabelle_List_View_JP_KR_China</fullName>
        <booleanFilter>1 AND (2 AND 3)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CalculatedRegion__c</columns>
        <columns>ProductInterest__c</columns>
        <columns>CallDispositionedBy__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LeadAge__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>SalesWorking,Sales Working,Converted,Disqualify</value>
        </filters>
        <filters>
            <field>BusinessLineInterest__c</field>
            <operation>equals</operation>
            <value>Automotive</value>
        </filters>
        <filters>
            <field>LEAD.COUNTRY_CODE</field>
            <operation>equals</operation>
            <value>HK,JP,CN,KR,TW</value>
        </filters>
        <label>Auto (Annabelle) List View JP, KR, China</label>
        <queue>CentralSDRPreSales</queue>
    </listViews>
    <listViews>
        <fullName>AutomotiveAPAC_Lead</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Rating__c</columns>
        <columns>Score__c</columns>
        <columns>LeadAge__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Converted,Disqualify</value>
        </filters>
        <label>Automotive - APAC</label>
        <queue>AutomotiveAPAC</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AutomotiveAmericas_Lead</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Rating__c</columns>
        <columns>Score__c</columns>
        <columns>LeadAge__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Converted,Disqualify</value>
        </filters>
        <label>Automotive - Americas</label>
        <queue>AutomotiveAmericas</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AutomotiveEMEA_Lead</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Rating__c</columns>
        <columns>Score__c</columns>
        <columns>LeadAge__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Converted,Disqualify</value>
        </filters>
        <label>Automotive - EMEA</label>
        <queue>AutomotiveEMEA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AxivasPreSales_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>CalculatedRegion__c</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CallDispositionedBy__c</columns>
        <columns>LeadAge__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>ProductInterest__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Prioritized,Pre-SalesWorking,Pre-Sales Working,Pre-SalesQualified,Pre-Sales Qualified</value>
        </filters>
        <label>Central SDR Pre-Sales</label>
        <queue>CentralSDRPreSales</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>CIRef_SPG_Referral_Lead</fullName>
        <active>true</active>
        <businessProcess>Standard Lead Process</businessProcess>
        <description>DO NOT MODIFY/DELETE. Record type referenced in referrals integration, this record type can&apos;t be deleted and must be available to system admins.</description>
        <label>SPG Referral Leads</label>
    </recordTypes>
    <recordTypes>
        <fullName>LeadMasterRecordType</fullName>
        <active>true</active>
        <businessProcess>Standard Lead Process</businessProcess>
        <description>General leads.</description>
        <label>Lead Master Record Type</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>BlockProhibitedCountries</fullName>
        <active>true</active>
        <description>Prevent users from selected prohibited countries from the country drop down</description>
        <errorConditionFormula>IF(OR($Setup.SystemMutedValidationRules__c.All__c, $Setup.SystemMutedValidationRules__c.Lead__c), False,VLOOKUP( $ObjectType.Country__c.Fields.IsProhibited__c , $ObjectType.Country__c.Fields.Name , Country ))</errorConditionFormula>
        <errorDisplayField>Country</errorDisplayField>
        <errorMessage>Due to U.S. export controls and sanctions restrictions, Lead records cannot be created for the selected country.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CIRef_Opportunity_creation_required</fullName>
        <active>true</active>
        <description>US- 3861071: DO NOT MODIFY/DELETE. When is a SPG referral lead is converted, if user checks of standard &quot;Don&apos;t create an opportunity upon conversion&quot; fields they will get an error message telling them to create an opportunity.</description>
        <errorConditionFormula>IsConverted &amp;&amp; ConvertedOpportunityId = null &amp;&amp;  ISPICKVAL(LeadSource, &quot;SPG Referral&quot;)</errorConditionFormula>
        <errorMessage>You must create an opportunity when converting this lead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CIRef_Other_Disqualified_reason</fullName>
        <active>true</active>
        <description>If disqualified reason code is other or prospect didn&apos;t want to buy for SPG referral lead.</description>
        <errorConditionFormula>AND(
ISPICKVAL(LeadSource, &quot;SPG Referral&quot;),
ISBLANK(CIRef_Disqualified_Reason_Other_Notes__c),
OR(
ISPICKVAL(DisqualifedReason__c,&quot;Other&quot;) ||
ISPICKVAL(DisqualifedReason__c,&quot;Prospect didn&apos;t want to buy&quot;)
))</errorConditionFormula>
        <errorDisplayField>DisqualifedReason__c</errorDisplayField>
        <errorMessage>When disqualifying an SPG Referral lead for &quot;Other&quot; or &quot;Prospect didn&apos;t want to buy&quot; reason codes, please enter notes in the &quot;Disqualified Reason Other Notes&quot; field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CompetitorRequiredWhenLostToCompetition</fullName>
        <active>true</active>
        <description>SFDC-3105 - Add &quot;Competitor&quot; look-up when Disqualified Reason is &quot;Competition&quot;</description>
        <errorConditionFormula>IF(OR($Setup.SystemMutedValidationRules__c.All__c, $Setup.SystemMutedValidationRules__c.Lead__c), False,AND(
ISPICKVAL( DisqualifedReason__c , &quot;Competition&quot;),
ISBLANK(Competitor__c)))</errorConditionFormula>
        <errorDisplayField>Competitor__c</errorDisplayField>
        <errorMessage>You have set Disqualified Reason as Competition, please populate the name of Competitor.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DataGovernanceImplementationforLead</fullName>
        <active>true</active>
        <description>SFDC1-6568 Account Governance Implementation for Lead Conversion.
SFDC1-8977 Changing error text
SFDC1-10115 Account should be active and approved before the Lead can be converted.</description>
        <errorConditionFormula>IF(OR($Setup.SystemMutedValidationRules__c.All__c, $Setup.SystemMutedValidationRules__c.Lead__c), False,AND(
  IsConverted,
  NOT(ISBLANK(AccountName__c)),
  OR(
    NOT(ISPICKVAL(Account__r.Status__c, &apos;Active&apos;)),
    NOT(ISPICKVAL(Account__r.DataGovernanceStatus__c, &apos;Approved&apos;))
  )
))</errorConditionFormula>
        <errorMessage>Please make sure Requested Account&apos;s Status is &quot;Active&quot; and that account&apos;s Governance Status is &quot;Approved&quot; before converting the lead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DisqualifiedReasonMandatory</fullName>
        <active>true</active>
        <description>SFDC1-192;When Disqualified is set, Disqualified Reason needs to be required.</description>
        <errorConditionFormula>IF(OR($Setup.SystemMutedValidationRules__c.All__c, $Setup.SystemMutedValidationRules__c.Lead__c), False,AND( 
ISPICKVAL(Status, &apos;Disqualify&apos;), 
ISPICKVAL(DisqualifedReason__c,&quot;&quot;)))</errorConditionFormula>
        <errorDisplayField>DisqualifedReason__c</errorDisplayField>
        <errorMessage>Please select Disqualified Reason if you want to move this lead to &apos;Disqualify&apos; status, or clear the Disqualified Reason and change the lead status to something else.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DisqualifyStatusMandatory</fullName>
        <active>true</active>
        <description>SFDC1-10209 When Disqualified Reason is set, Status can not be anything other than Disqualify.</description>
        <errorConditionFormula>IF(OR($Setup.SystemMutedValidationRules__c.All__c, $Setup.SystemMutedValidationRules__c.Lead__c), False,AND( 
(NOT ISPICKVAL(Status, &apos;Disqualify&apos;)),
(NOT ISPICKVAL(DisqualifedReason__c,&quot;&quot;))
))</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>You entered a Disqualified Reason, did you mean to move the lead to &apos;Disqualify&apos; status? If not, please change the Disqualified Reason value to &quot;None&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EmailRequired</fullName>
        <active>true</active>
        <description>SFDC1-2398;When [Email Unknown] is not checked, Email Address is required.</description>
        <errorConditionFormula>IF(OR($Setup.SystemMutedValidationRules__c.All__c, $Setup.SystemMutedValidationRules__c.Lead__c), False,EmailUnknown__c = false
&amp;&amp; Email = null)</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>Please enter Email address or check the Email Unknown box (a business phone number will be required in that case)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EmailUnknownThenPhoneRequired</fullName>
        <active>true</active>
        <description>SFDC1-2398,When [Email Unknown] is checked, Business phone field is required.</description>
        <errorConditionFormula>IF(OR($Setup.SystemMutedValidationRules__c.All__c, $Setup.SystemMutedValidationRules__c.Lead__c), False,EmailUnknown__c = true
&amp;&amp; Phone = null)</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Please enter Phone when Email is unknown</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EmailUnknownUncheckIfEmailPresent</fullName>
        <active>true</active>
        <description>SFDC1-5245 - If email address is populated then Email Unknown checkbox should be unchecked.</description>
        <errorConditionFormula>IF(OR($Setup.SystemMutedValidationRules__c.All__c, $Setup.SystemMutedValidationRules__c.Lead__c), False,EmailUnknown__c &amp;&amp; NOT(ISBLANK(Email)))</errorConditionFormula>
        <errorDisplayField>EmailUnknown__c</errorDisplayField>
        <errorMessage>If email address is populated then Email Unknown checkbox should be unchecked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LID__Check_Company_Id_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LeadStatusCanNotbeConvertedDirectly</fullName>
        <active>true</active>
        <description>SFDC1-9488 : Converted Status should be directly selected without converting the Lead</description>
        <errorConditionFormula>IF(OR($Setup.SystemMutedValidationRules__c.All__c, $Setup.SystemMutedValidationRules__c.Lead__c), False,IsConverted  = FALSE &amp;&amp;  TEXT(Status) = &apos;Converted&apos;)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>You can not set status to &apos;Converted&apos;, Please use Convert button to convert Lead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LeadStatusLimitationForMarketing</fullName>
        <active>true</active>
        <description>SFDC1-192;Sales and Marketing users cannot change Lead Status</description>
        <errorConditionFormula>IF(OR($Setup.SystemMutedValidationRules__c.All__c, $Setup.SystemMutedValidationRules__c.Lead__c), False,AND(
ISPICKVAL(Status, &apos;SalesWorking&apos;),
CONTAINS($Profile.Name, &apos;Marketing&apos;)))</errorConditionFormula>
        <errorMessage>Marketing users cannot select the &apos;Sales Working&apos; Lead Status, please select &apos;Prioritized&apos;, &apos;Pre-Sales Working&apos;, or &apos;Pre-Sales Qualified&apos;.</errorMessage>
    </validationRules>
</CustomObject>